2009-12-18  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Darin Adler.

        REGRESSION (r38898): Using the up arrow in a textarea gets "stuck"
        at the beginning.
        https://bugs.webkit.org/show_bug.cgi?id=31920

        Added test showing the problem described in the bug.

        * editing/selection/wrapped-line-caret-3.html:
        * editing/selection/wrapped-line-caret-3-expected.txt:
2009-12-18  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Darin Adler.

        REGRESSION (r38898): Using the up arrow in a textarea gets "stuck"
        at the beginning.
        https://bugs.webkit.org/show_bug.cgi?id=31920

        Moving up from a position after the end of the previous lines
        should use UPSTREAM affinity to render the caret in the previous
        line.

        Test: editing/selection/wrapped-line-caret-3.html

        * rendering/RenderText.cpp:
        (WebCore::RenderText::positionForPoint):

Canonical link: https://commits.webkit.org/43726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52303 268f45cc-cd09-0410-ab3c-d52691b4dbfc